[project]
name = "tts-dataset-expander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.2",
    "phonikud",
    "phonikud-onnx>=1.0.4",
    "pydub>=0.25.1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
phonikud = { git = "https://github.com/thewh1teagle/phonikud" }
